fix(select): prefix misalignment

--- a/src/components/select/themes/light/select.base.scss
+++ b/src/components/select/themes/light/select.base.scss
@@ -36,3 +36,8 @@ igc-input::part(input) {
         background: transparent;
     }
 }
+
+[name='prefix']::slotted(*),
+[name='suffix']::slotted(*) {
+    display: flex;
+}
